--- a/main.html
+++ b/main.html
@@ -14,16 +14,16 @@
 	<h1><a href="https://acciojob.com/blog/">Blog</a></h1>
 
     <img src="https://dummyimage.com/600x400/000/fff" height="200px">
-    <h1><a href="https://acciojob.com/blog/brute-force-vs-optimization/" target="_blank">Brute Force vs. Optimization</a></h1>
-    <p><a href="">We can say that optimization is hjkudjksdui</a></p>
+    <h1><a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a></h1>
+    <p><a href="https://acciojob.com/blog/brute-force-vs-optimization/">We can say that optimization is hjkudjksdui</a></p>
     
 	<img src="https://dummyimage.com/600x400/000/fff" height="200px">
-    <h1><a href="https://acciojob.com/blog/dsa-vs-competitive-programming/" target="_blank">DSA vs. Competitive Programming</a></h1>
-    <p><a href="">DSA or Competitive programming? hjkjuijkbsduigbhj</a></p>
+    <h1><a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a></h1>
+    <p><a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA or Competitive programming? hjkjuijkbsduigbhj</a></p>
     
 	<img src="https://dummyimage.com/600x400/000/fff" height="200px">
-    <h1><a href="https://acciojob.com/blog/untitled-19/" target="_blank">Complete Guide on FlexBox</a></h1>
-    <p><a href="">As a job seeker, you may wonder husdhjkknsduijk dsui.</a></p>
+    <h1><a href="https://acciojob.com/blog/untitled-19/">Complete Guide on FlexBox</a></h1>
+    <p><a href="https://acciojob.com/blog/untitled-19/">As a job seeker, you may wonder husdhjkknsduijk dsui.</a></p>
 	
 </body>
 
